
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "dlnp2", email = "hideta7.dev@gmail.com"},
]
dependencies = [
    "kaggle>=1.5.13",
    "pandas>=2.0.2",
    "dask>=2023.5.1",
    "pyarrow>=12.0.0",
    "polars[pyarrow]>=0.18.0",
    "duckdb>=0.8.0",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "ipython>=8.14.0",
    "jupyterlab>=4.0.1",
    "matplotlib>=3.7.1",
    "isort>=5.12.0",
    "black>=23.3.0",
]
